--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -24,7 +24,7 @@ jobs:
     - name: Unset CI
       run: unset CI
     - name: Upgrade Yarn
-      run: npm install -g yarn@1.22
+      run: npm install -g yarn@latest
     - name: Cache Gradle packages
       id: cache-npm
       uses: actions/cache@v3
